0.3.7.0

	* Make division `/` on Scientifics slightly more efficient.

	* Fix the Show instance to surround negative numbers with parentheses when
	necessary.

0.3.6.2
	* Due to a regression introduced in 0.3.4.14 the RealFrac methods
	and floatingOrInteger became vulnerable to a space blowup when
	applied to scientifics with huge exponents. This has now been
	fixed again.

0.3.6.1
	* Fix build on GHC < 8.

0.3.6.0
	* Make the methods of the Hashable, Eq and Ord instances safe to
	use when applied to scientific numbers coming from untrusted
	sources. Previously these methods first converted their arguments
	to Rational before applying the operation. This is unsafe because
	converting a Scientific to a Rational could fill up all space and
	crash your program when the Scientific has a huge base10Exponent.

	Do note that the hash computation of the Hashable Scientific
	instance has been changed because of this improvement!

	Thanks to Tom Sydney Kerckhove (@NorfairKing) for pushing me to
	fix this.

	* fromRational :: Rational -> Scientific now throws an error
	instead of diverging when applied to a repeating decimal. This
	does mean it will consume space linear in the number of digits of
	the resulting scientific. This makes "fromRational" and the other
	Fractional methods "recip" and "/" a bit safer to use.

	* To get the old unsafe but more efficient behaviour the following
	function was added: unsafeFromRational :: Rational -> Scientific.

	* Add alternatives for fromRationalRepetend:

	  fromRationalRepetendLimited
	      :: Int -- ^ limit
	      -> Rational
	      -> Either (Scientific, Rational)
		        (Scientific, Maybe Int)

	  and:

	  fromRationalRepetendUnlimited
	      :: Rational -> (Scientific, Maybe Int)

	  Thanks to Ian Jeffries (@seagreen) for the idea.

0.3.5.3
	* Dropped upper version bounds of dependencies
	  because it's to much work to maintain.

0.3.5.2
	* Remove unused ghc-prim dependency.
	* Added unit tests for read and scientificP
