@@ -93,6 +93,7 @@ library
     , hashable            >=1.2.7.0
     , integer-logarithms  >=1.0.3.1
     , primitive           >=0.7.1.0
+    , template-haskell    >=2.8     && <2.18
     , text                >=1.2.3.0
 
   if flag(bytestring-builder)
@@ -115,6 +116,9 @@ library
 
     else
       build-depends: integer-gmp
+
+  if impl(ghc <8)
+    other-extensions: TemplateHaskell
 
   hs-source-dirs:   src
   default-language: Haskell2010
