@@ -1,9 +1,11 @@
 0.3.7.0
 
-	* Make division `/` on Scientifics slightly more efficient.
+	* Make division (/) on Scientifics slightly more efficient.
 
 	* Fix the Show instance to surround negative numbers with parentheses when
 	necessary.
+
+	* Add (Template Haskell) Lift Scientific instance
 
 0.3.6.2
 	* Due to a regression introduced in 0.3.4.14 the RealFrac methods
